# chess

./: CMakeLists.txt
src/: BoardDisplay.h  BoardSpace.cpp  BoardSpace.h  board.cpp  board.h  game.cpp  game.h  main.cpp
src/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
src/players/: player.cpp  player.h
